fix: styles on mobile view

--- a/client/src/app/components/SetupSteps/index.module.css
+++ b/client/src/app/components/SetupSteps/index.module.css
@@ -41,6 +41,7 @@
 
     content: counter(section);
     font-size: 26px;
+    line-height: 26px;
     width: 40px;
     min-width: 40px;
     height: 40px;
@@ -71,10 +72,12 @@
 
 .step_text {
     font-size: 26px;
+    line-height: 26px;
 }
 
 .step_title {
     font-size: 26px;
+    line-height: 26px;
     position: absolute;
     padding: 0 0 0 70px;
     transform: translateY(8px);
@@ -96,7 +99,15 @@
     display: flex;
     align-items: center;
     font-size: 24px;
+    line-height: 24px;
 }
+
+@media only screen and (max-width: 460px) {
+    .auth_init_link {
+        margin-top: 15px;
+    }
+}
+
 
 .project {
     font-size: 18px;
